--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="stylesheet" href="./css/card.css" />
 		<link rel="stylesheet" href="./css/form.css" />
-		<title>Document</title>
+		<title>AluraGeek</title>
 	</head>
 	<body>
 		<header>
